# dotprompt

./: .bazelignore  .bazelrc  .editorconfig  .gitignore  .npmrc  .readthedocs.yaml  .release-please-config.json  .release-please-manifest.json  BUILD.bazel  Cargo.toml  DOTPROMPT_PARITY.md  GEMINI.md  HANDLEBARS_PARITY.md  MAINTAINERS.yaml  MODULE.bazel  README.md  RELEASEKIT_ROADMAP.md  biome.json  captainhook.json  dart.MODULE.bazel  dart.bazelrc  go.MODULE.bazel  java.MODULE.bazel  java.bazelrc  kotlin.MODULE.bazel  maven_install.json  mkdocs.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  python.MODULE.bazel  rust.MODULE.bazel  ts.MODULE.bazel  ts.bazelrc
.cargo/: config.toml
bazel/rules_dart/: BUILD.bazel  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  MODULE.bazel  README.md  ROADMAP.md  aspects.bzl  build_runner.bzl  defs.bzl  deps.bzl  extensions.bzl  proto.bzl  rbe.bazelrc  repositories.bzl  toolchain.bzl  transitions.bzl
bazel/rules_dart/.bcr/: metadata.json  presubmit.yml  source.json
bazel/rules_dart/aspects/: BUILD.bazel  antigravity.bzl  cursor.bzl  zed.bzl
bazel/rules_dart/examples/: README.md
bazel/rules_dart/examples/freezed_example/: BUILD.bazel  MODULE.bazel  pubspec.yaml  test.bat  test.sh
bazel/rules_dart/examples/freezed_example/lib/: main.dart  user.dart
bazel/rules_dart/examples/freezed_example/test/: user_test.dart
bazel/rules_dart/examples/hello_world/: BUILD.bazel  MODULE.bazel  pubspec.yaml
bazel/rules_dart/examples/hello_world/lib/: hello.dart
bazel/rules_dart/examples/hello_world/test/: hello_test.dart
bazel/rules_dart/examples/proto_example/: BUILD.bazel  MODULE.bazel  pubspec.yaml  test.bat  test.sh
bazel/rules_dart/examples/proto_example/lib/: client.dart  server.dart
bazel/rules_dart/examples/proto_example/proto/: helloworld.proto  user.proto
bazel/rules_dart/examples/proto_example/test/: user_test.dart
bazel/rules_dart/gazelle/: BUILD.bazel  gazelle.py  go.mod  go.sum
bazel/rules_dart/gazelle/cmd/generate_deps/: BUILD.bazel  main.go
bazel/rules_dart/gazelle/language/: BUILD.bazel  lang.go
bazel/rules_dart/gazelle/pubspec/: BUILD.bazel  parser.go  types.go
bazel/rules_dart/private/: BUILD.bazel  bep.bzl  coverage.bzl  helpers.bzl  incremental.bzl  pubspec_parser.bzl  rbe.bzl  sandbox.bzl  sharding.bzl  unix.bzl  windows.bzl  workers.bzl
bazel/rules_dart/scripts/: test_all.bat  test_all.sh  test_examples.bat  test_examples.sh
bazel/rules_dart/worker/: BUILD.bazel  pubspec.yaml  worker_wrapper.bat  worker_wrapper.sh
bazel/rules_dart/worker/lib/: analyzer_worker.dart  compile_worker.dart  protocol.dart
bazel/rules_dart/worker/tests/: smoke_test.bat  smoke_test.sh
bazel/rules_flutter/: BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  GEMINI.md  LICENSE  MODULE.bazel  README.md  ROADMAP.md  SECURITY.md  coverage.bzl  defs.bzl  devtools.bzl  docker.bzl  extensions.bzl  flutter.bzl  golden.bzl  repositories.bzl
bazel/rules_flutter/.bcr/: source.json
bazel/rules_flutter/aspects/: BUILD.bazel  antigravity.bzl  cursor.bzl  ide.bzl  zed.bzl
bazel/rules_flutter/examples/grpc_app/: .gitignore  BUILD.bazel  MODULE.bazel  README.md  analysis_options.yaml  pubspec.yaml  run.sh
bazel/rules_flutter/examples/grpc_app/lib/: main.dart
bazel/rules_flutter/examples/grpc_app/proto/: helloworld.proto
bazel/rules_flutter/gazelle/: BUILD.bazel  go.mod
bazel/rules_flutter/gazelle/language/: BUILD.bazel  lang.go
bazel/rules_flutter/gazelle/pubspec/: BUILD.bazel  parser.go  types.go
bazel/rules_flutter/private/: BUILD.bazel  helpers.bzl  workers.bzl
bazel/rules_flutter/scripts/: test_all.bat  test_all.sh
bazel/rules_flutter/toolchains/: BUILD.bazel  toolchain.bzl
bazel/rules_flutter/workers/: BUILD.bazel  analyzer_worker.dart  hot_reload_worker.dart  protocol.dart  pubspec.yaml
dart/dotprompt/: BUILD.bazel  CHANGELOG.md  PARITY.md  README.md  analysis_options.yaml  pubspec.yaml
dart/dotprompt/lib/: dotprompt.dart
dart/dotprompt/lib/src/: dotprompt.dart  error.dart  parse.dart  picoschema.dart  store.dart  types.dart
dart/dotprompt/test/: BUILD.bazel  dotprompt_test.dart  parse_test.dart  picoschema_test.dart  spec_test.dart  types_test.dart
dart/handlebarrz/test/: BUILD.bazel  antlr_parser_test.dart  handlebars_test.dart
go/: go.mod  (+3 more)
java/com/google/dotprompt/: BUILD.bazel  Dotprompt.java  DotpromptOptions.java  DotpromptOptionsTest.java  DotpromptTest.java  ResolveToolsConcurrencyTest.java  ResolveToolsRaceConditionTest.java  SpecTest.java  package-info.java  pom_template.xml
python/dotpromptz/: BUILD.bazel  CHANGELOG.md  pyproject.toml
python/dotpromptz/src/dotpromptz/: __init__.py  dotprompt.py  errors.py  helpers.py  parse.py  picoschema.py  resolvers.py  typing.py  util.py
python/dotpromptz/tests/dotpromptz/: dotprompt_test.py  helpers_test.py  models_test.py  parse_test.py  spec_test.py  util_test.py
python/dotpromptz/tests/smoke/: package_test.py  pyproject.toml
python/handlebarrz/: BUILD.bazel  CHANGELOG.md  Cargo.toml  README.md  dockerfile-alpine  dockerfile-alpine-x86-64  dockerfile-arm64  generate-alpine-wheels-x86-64.sh  generate-alpine-wheels.sh  generate-arm-wheels.sh  generate-x86-64-wheels.sh  pyproject.toml
python/handlebarrz/smoke_tests/: Dockerfile-alpine  Dockerfile-alpine-x86-64  handlebarrz_test.py  pyproject.toml
python/handlebarrz/src/: lib.rs
python/handlebarrz/src/handlebarrz/: __init__.py  _native.pyi
python/handlebarrz/tests/: advanced_features_test.py  escape_test.py  helpers_test.py  subexpression_test.py  template_core_test.py  template_test.py
rs/dotprompt/: BUILD.bazel  Cargo.toml  README.md
rs/dotprompt/src/: dotprompt.rs  error.rs  helpers.rs  lib.rs  parse.rs  picoschema.rs  store.rs  types.rs  util.rs
rs/dotprompt/src/stores/: dir.rs  mod.rs
rs/dotprompt/tests/: spec_test.rs
rs/promptly/: BUILD.bazel  Cargo.toml  README.md
rs/promptly/src/: config.rs  formatter.rs  linter.rs  lsp.rs  main.rs  span.rs
rs/promptly/src/commands/: check.rs  completions.rs  fmt.rs  lsp.rs  mod.rs
rs/promptly/tests/: cli_tests.rs
(+279 files in other folders)
