# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

"""Configuration for Bazel with Java dependencies."""

bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "rules_jvm_external", version = "6.9")

# Register the specific Java toolchain version.
# See https://github.com/bazelbuild/rules_java/blob/master/toolchains.bzl
use_extension("@rules_java//java:extensions.bzl", "toolchains")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.github.jknack:handlebars:4.4.0",
        "com.google.guava:guava:33.5.0-jre",
        "com.fasterxml.jackson.core:jackson-databind:2.20.1",
        "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.20.1",
        "com.google.code.gson:gson:2.10.1",
        "com.google.errorprone:error_prone_annotations:2.23.0",
    ],
    known_contributing_modules = [
        "bazel_worker_java",
        "dotprompt",
        "protobuf",
    ],
    lock_file = "//:maven_install.json",
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)

# IntelliJ Platform SDK dependencies for JetBrains plugin development.
# These are fetched from JetBrains' Maven repositories.
# Version 241.18968.26 corresponds to IntelliJ IDEA 2024.1.4
INTELLIJ_VERSION = "241.18968.26"

maven.install(
    name = "intellij_maven",
    artifacts = [
        "com.jetbrains.intellij.platform:util:" + INTELLIJ_VERSION,
        "com.jetbrains.intellij.platform:util-ui:" + INTELLIJ_VERSION,
        "com.jetbrains.intellij.platform:core:" + INTELLIJ_VERSION,
        "com.jetbrains.intellij.platform:core-ui:" + INTELLIJ_VERSION,
        "com.jetbrains.intellij.platform:core-impl:" + INTELLIJ_VERSION,
        "com.jetbrains.intellij.platform:ide-core:" + INTELLIJ_VERSION,
        "com.jetbrains.intellij.platform:ide-core-impl:" + INTELLIJ_VERSION,
        "com.jetbrains.intellij.platform:analysis:" + INTELLIJ_VERSION,
        "com.jetbrains.intellij.platform:analysis-impl:" + INTELLIJ_VERSION,
        "com.jetbrains.intellij.platform:editor:" + INTELLIJ_VERSION,
        "com.jetbrains.intellij.platform:lang:" + INTELLIJ_VERSION,
        "com.jetbrains.intellij.platform:lang-impl:" + INTELLIJ_VERSION,
        "com.jetbrains.intellij.platform:indexing:" + INTELLIJ_VERSION,
        "com.jetbrains.intellij.platform:indexing-impl:" + INTELLIJ_VERSION,
    ],
    repositories = [
        "https://www.jetbrains.com/intellij-repository/releases",
        "https://cache-redirector.jetbrains.com/intellij-dependencies",
        "https://repo1.maven.org/maven2",
    ],
)
maven.artifact(
    testonly = True,
    artifact = "junit",
    group = "junit",
    version = "4.13.2",
)
maven.artifact(
    testonly = True,
    artifact = "truth-proto-extension",
    group = "com.google.truth.extensions",
    version = "1.4.4",
)
maven.artifact(
    artifact = "guava",
    force_version = True,
    group = "com.google.guava",
    version = "33.5.0-jre",
)
maven.artifact(
    testonly = True,
    artifact = "truth",
    force_version = True,
    group = "com.google.truth",
    version = "1.4.4",
)
maven.artifact(
    artifact = "gson",
    force_version = True,
    group = "com.google.code.gson",
    version = "2.10.1",
)
maven.artifact(
    artifact = "error_prone_annotations",
    force_version = True,
    group = "com.google.errorprone",
    version = "2.23.0",
)
use_repo(maven, "intellij_maven", "maven")
