# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

"""Dotprompt Dart implementation."""

load("@rules_dart//:defs.bzl", "dart_library")

package(default_visibility = ["//visibility:public"])

# Export the Dart library
dart_library(
    name = "dotprompt",
    srcs = glob(["lib/**/*.dart"]) + ["pubspec.yaml"],
    pubspec = "pubspec.yaml",
    deps = [
        "@dart_deps_collection//:collection",
        "@dart_deps_crypto//:crypto",
        "@dart_deps_json_schema//:json_schema",
        "@dart_deps_meta//:meta",
        "@dart_deps_path//:path",
        "@dart_deps_yaml//:yaml",
        "@dotprompt//dart/handlebarrz",
    ],
)

# Export pubspec for pub commands
exports_files([
    "pubspec.yaml",
    "analysis_options.yaml",
])

exports_files(["pubspec.lock"])
