# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

load("@pypi//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library", "py_test")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "dotpromptz",
    srcs = glob(["src/**/*.py"]),
    imports = ["src"],
    deps = [
        "//python/handlebarrz",
        requirement("aiofiles"),
        requirement("anyio"),
        requirement("pydantic"),
        requirement("pyyaml"),
        requirement("structlog"),
        requirement("types-aiofiles"),
        requirement("types-pyyaml"),
    ],
)

py_test(
    name = "dotprompt_test",
    srcs = ["tests/dotpromptz/dotprompt_test.py"],
    imports = ["tests"],
    deps = [
        ":dotpromptz",
        requirement("pytest"),
    ],
)

py_test(
    name = "helpers_test",
    srcs = ["tests/dotpromptz/helpers_test.py"],
    imports = ["tests"],
    deps = [
        ":dotpromptz",
        requirement("pytest"),
    ],
)

py_test(
    name = "models_test",
    srcs = ["tests/dotpromptz/models_test.py"],
    imports = ["tests"],
    deps = [
        ":dotpromptz",
        requirement("pytest"),
    ],
)

py_test(
    name = "parse_test",
    srcs = ["tests/dotpromptz/parse_test.py"],
    imports = ["tests"],
    deps = [
        ":dotpromptz",
        requirement("pytest"),
    ],
)

py_test(
    name = "picoschema_test",
    srcs = ["tests/dotpromptz/picoschema_test.py"],
    imports = ["tests"],
    deps = [
        ":dotpromptz",
        requirement("pytest"),
    ],
)

py_test(
    name = "resolvers_test",
    srcs = ["tests/dotpromptz/resolvers_test.py"],
    imports = ["tests"],
    deps = [
        ":dotpromptz",
        requirement("pytest"),
    ],
)

py_test(
    name = "spec_test",
    srcs = ["tests/dotpromptz/spec_test.py"],
    data = ["//spec"],
    imports = ["tests"],
    deps = [
        ":dotpromptz",
        requirement("pytest"),
    ],
)

py_test(
    name = "util_test",
    srcs = ["tests/dotpromptz/util_test.py"],
    imports = ["tests"],
    deps = [
        ":dotpromptz",
        requirement("pytest"),
    ],
)

py_test(
    name = "dir_async_test",
    srcs = ["tests/dotpromptz/stores/dir_async_test.py"],
    imports = ["tests"],
    deps = [
        ":dotpromptz",
        requirement("pytest"),
        requirement("pytest-asyncio"),
    ],
)

py_test(
    name = "dir_sync_test",
    srcs = ["tests/dotpromptz/stores/dir_sync_test.py"],
    imports = ["tests"],
    deps = [
        ":dotpromptz",
        requirement("pytest"),
    ],
)
