# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

load("@pypi//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("@rules_rust//rust:defs.bzl", "rust_shared_library")

package(default_visibility = ["//visibility:public"])

rust_shared_library(
    name = "native",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "handlebarrz",
    edition = "2024",
    rustc_flags = select({
        "@platforms//os:macos": [
            "-C",
            "link-arg=-undefined",
            "-C",
            "link-arg=dynamic_lookup",
        ],
        "//conditions:default": [],
    }),
    deps = [
        "@crates//:handlebars",
        "@crates//:pyo3",
        "@crates//:serde",
        "@crates//:serde_json",
    ],
)

# Rename the shared library to what Python expects (e.g., _native.so)
# This rule copies the output of rust_shared_library to the expected location.
genrule(
    name = "copy_native_lib",
    srcs = [":native"],
    outs = ["src/handlebarrz/_native.so"],
    cmd = "cp $< $@",
)

py_library(
    name = "handlebarrz",
    srcs = glob(["src/**/*.py"]),
    data = [":copy_native_lib"],
    imports = ["src"],
    deps = [
        requirement("structlog"),
    ],
)

py_test(
    name = "advanced_features_test",
    srcs = ["tests/advanced_features_test.py"],
    imports = ["tests"],
    deps = [
        ":handlebarrz",
        requirement("pytest"),
    ],
)

py_test(
    name = "block_context_test",
    srcs = ["tests/block_context_test.py"],
    imports = ["tests"],
    deps = [
        ":handlebarrz",
        requirement("pytest"),
    ],
)

py_test(
    name = "block_helpers_test",
    srcs = ["tests/block_helpers_test.py"],
    imports = ["tests"],
    deps = [
        ":handlebarrz",
        requirement("pytest"),
    ],
)

py_test(
    name = "escape_test",
    srcs = ["tests/escape_test.py"],
    imports = ["tests"],
    deps = [
        ":handlebarrz",
        requirement("pytest"),
    ],
)

py_test(
    name = "extra_helpers_test",
    srcs = ["tests/extra_helpers_test.py"],
    imports = ["tests"],
    deps = [
        ":handlebarrz",
        requirement("pytest"),
    ],
)

py_test(
    name = "helpers_test",
    srcs = ["tests/helpers_test.py"],
    imports = ["tests"],
    deps = [
        ":handlebarrz",
        requirement("pytest"),
    ],
)

py_test(
    name = "partials_test",
    srcs = ["tests/partials_test.py"],
    imports = ["tests"],
    deps = [
        ":handlebarrz",
        requirement("pytest"),
    ],
)

py_test(
    name = "subexpression_test",
    srcs = ["tests/subexpression_test.py"],
    imports = ["tests"],
    deps = [
        ":handlebarrz",
        requirement("pytest"),
    ],
)

py_test(
    name = "template_core_test",
    srcs = ["tests/template_core_test.py"],
    imports = ["tests"],
    deps = [
        ":handlebarrz",
        requirement("pytest"),
    ],
)

py_test(
    name = "template_test",
    srcs = ["tests/template_test.py"],
    imports = ["tests"],
    deps = [
        ":handlebarrz",
        requirement("pytest"),
    ],
)

py_test(
    name = "whitespace_test",
    srcs = ["tests/whitespace_test.py"],
    imports = ["tests"],
    deps = [
        ":handlebarrz",
        requirement("pytest"),
    ],
)
