# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("//bazel/rust:defs.bzl", "rust_spec_test")

rust_library(
    name = "dotprompt",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "dotprompt",
    edition = "2024",
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:handlebars",
        "@crates//:hex",
        "@crates//:regex",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:serde_yaml",
        "@crates//:sha1",
        "@crates//:thiserror",
        "@crates//:unicode-normalization",
        "@crates//:urlencoding",
        "@crates//:walkdir",
    ],
)

# Unit tests
rust_test(
    name = "dotprompt_test",
    crate = ":dotprompt",
)

# Spec-based tests - one target per spec file (following Java pattern)

rust_spec_test(
    name = "SpecTest_metadata",
    spec_file = "//spec:metadata.yaml",
    deps = [":dotprompt"],
)

rust_spec_test(
    name = "SpecTest_partials",
    spec_file = "//spec:partials.yaml",
    deps = [":dotprompt"],
)

rust_spec_test(
    name = "SpecTest_picoschema",
    spec_file = "//spec:picoschema.yaml",
    deps = [":dotprompt"],
)

rust_spec_test(
    name = "SpecTest_variables",
    spec_file = "//spec:variables.yaml",
    deps = [":dotprompt"],
)

rust_spec_test(
    name = "SpecTest_helper_history",
    spec_file = "//spec:helpers/history.yaml",
    deps = [":dotprompt"],
)

rust_spec_test(
    name = "SpecTest_helper_ifEquals",
    spec_file = "//spec:helpers/ifEquals.yaml",
    deps = [":dotprompt"],
)

rust_spec_test(
    name = "SpecTest_helper_json",
    spec_file = "//spec:helpers/json.yaml",
    deps = [":dotprompt"],
)

rust_spec_test(
    name = "SpecTest_helper_media",
    spec_file = "//spec:helpers/media.yaml",
    deps = [":dotprompt"],
)

rust_spec_test(
    name = "SpecTest_helper_role",
    spec_file = "//spec:helpers/role.yaml",
    deps = [":dotprompt"],
)

rust_spec_test(
    name = "SpecTest_helper_section",
    spec_file = "//spec:helpers/section.yaml",
    deps = [":dotprompt"],
)

rust_spec_test(
    name = "SpecTest_helper_unlessEquals",
    spec_file = "//spec:helpers/unlessEquals.yaml",
    deps = [":dotprompt"],
)

rust_spec_test(
    name = "SpecTest_whitespace",
    spec_file = "//spec:whitespace.yaml",
    deps = [":dotprompt"],
)
