# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
categories  = ["template-engine", "development-tools"]
description = "Dotprompt: Executable GenAI Prompt Templates for Rust"
edition     = "2024"
keywords    = ["genai", "prompting", "llms", "templating"]
license     = "Apache-2.0"
name        = "dotprompt"
readme      = "README.md"
repository  = "https://github.com/google/dotprompt"
version     = "0.1.0"

[dependencies]
handlebars.workspace = true
regex                = "1.11"
serde.workspace      = true
serde_json.workspace = true
serde_yaml           = "0.9"
thiserror            = "2.0"

[lints]
workspace = true
