# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")

rust_binary(
    name = "promptly",
    srcs = glob(["src/**/*.rs"]),
    edition = "2024",
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:anstyle",
        "@crates//:ariadne",
        "@crates//:clap",
        "@crates//:clap_complete",
        "@crates//:dirs",
        "@crates//:owo-colors",
        "@crates//:regex",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:serde_yaml",
        "@crates//:thiserror",
        "@crates//:tokio",
        "@crates//:toml",
        "@crates//:tower-lsp",
        "@crates//:walkdir",
    ],
)

rust_test(
    name = "promptly_test",
    crate = ":promptly",
    deps = [
        "@crates//:tempfile",
    ],
)
