# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

"""Private implementation details for rules_dart.

This package contains internal modules that are not part of the public API.
Do not depend on these directly; use the public API in defs.bzl instead.
"""

package(default_visibility = ["//visibility:public"])

exports_files([
    "coverage.bzl",
    "helpers.bzl",
    "rbe.bzl",
    "windows.bzl",
    "unix.bzl",
])
