# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

"""Persistent worker for rules_dart.

This package provides the Bazel persistent worker implementation
that accelerates Dart compilation by keeping the Dart VM warm.
"""

load("//:defs.bzl", "dart_library")

package(default_visibility = ["//visibility:public"])

# Worker library (zero external dependencies)
dart_library(
    name = "worker_lib",
    srcs = ["bin/worker.dart"],
    pubspec = "pubspec.yaml",
)

# Unix worker executable
sh_binary(
    name = "worker_unix",
    srcs = ["worker_wrapper.sh"],
    data = [
        "bin/worker.dart",
        "@dart_sdk//:dart_bin",
    ],
)

# Export wrapper scripts for direct use
exports_files([
    "worker_wrapper.sh",
    "worker_wrapper.bat",
    "bin/worker.dart",
])

# Alias for the worker (platform-agnostic reference)
# Users on Windows should use worker_wrapper.bat directly
alias(
    name = "worker",
    actual = ":worker_unix",
)

# Unix smoke test
sh_test(
    name = "worker_smoke_test",
    srcs = ["tests/smoke_test.sh"],
    data = [
        ":worker_unix",
        "bin/worker.dart",
        "@dart_sdk//:dart_bin",
    ],
    tags = ["local"],  # Requires local execution for stdin/stdout
)
