# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

"""Persistent worker for rules_dart.

This package provides the Bazel persistent worker implementation
that accelerates Dart compilation by keeping the Dart VM warm.

# ELI5 (Explain Like I'm 5)

Imagine you're starting a car every time you want to drive to school.
That's slow! A worker is like keeping the car running - you just hop in
and drive. The Dart VM (the car) stays warm and ready.

# Key Terms

| Term | What It Means |
|------|---------------|
| **Worker** | A program that stays running between builds |
| **Protocol** | How Bazel and workers talk to each other |
| **Flagfile** | A file with arguments (like a to-do list) |
"""

load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("//:defs.bzl", "dart_library")

package(default_visibility = ["//visibility:public"])

# Protocol library - shared worker communication code
dart_library(
    name = "protocol",
    srcs = ["lib/protocol.dart"],
    pubspec = "pubspec.yaml",
)

# Compile worker - persistent worker for dart compile commands
dart_library(
    name = "compile_worker",
    srcs = ["lib/compile_worker.dart"],
    pubspec = "pubspec.yaml",
    deps = [":protocol"],
)

# Analyzer worker - persistent worker for dart analyze commands
dart_library(
    name = "analyzer_worker",
    srcs = ["lib/analyzer_worker.dart"],
    pubspec = "pubspec.yaml",
    deps = [":protocol"],
)

# Legacy worker library (zero external dependencies)
dart_library(
    name = "worker_lib",
    srcs = ["bin/worker.dart"],
    pubspec = "pubspec.yaml",
)

# Unix worker executable
sh_binary(
    name = "worker_unix",
    srcs = ["worker_wrapper.sh"],
    data = [
        "bin/worker.dart",
        "@dart_sdk//:dart_bin",
    ],
)

# Unix compile worker executable
sh_binary(
    name = "compile_worker_unix",
    srcs = ["worker_wrapper.sh"],
    args = ["--worker-main=lib/compile_worker.dart"],
    data = [
        "lib/compile_worker.dart",
        "lib/protocol.dart",
        "@dart_sdk//:dart_bin",
    ],
)

# Export wrapper scripts for direct use
exports_files([
    "worker_wrapper.sh",
    "worker_wrapper.bat",
    "bin/worker.dart",
    "lib/protocol.dart",
    "lib/compile_worker.dart",
    "lib/analyzer_worker.dart",
])

# Alias for the worker (platform-agnostic reference)
# Users on Windows should use worker_wrapper.bat directly
alias(
    name = "worker",
    actual = ":worker_unix",
)

# Unix smoke test
sh_test(
    name = "worker_smoke_test",
    srcs = ["tests/smoke_test.sh"],
    data = [
        "bin/worker.dart",
        ":worker_unix",
        "@dart_sdk//:dart_bin",
    ],
    tags = ["local"],  # Requires local execution for stdin/stdout
)
