# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

"""Dart test targets for Dotprompt."""

load("//bazel/dart:defs.bzl", "dart_spec_test")
load("@rules_dart//:defs.bzl", "dart_test")

package(default_visibility = ["//visibility:public"])

# Export test files
exports_files(glob(["**/*.dart"]))

# Unit tests
# Note: deps are managed by the dart_test macro which includes the main library
dart_test(
    name = "dotprompt_test",
    main = "dotprompt_test.dart",
    package_dir = "dart/dotprompt",
)

dart_test(
    name = "parse_test",
    main = "parse_test.dart",
    package_dir = "dart/dotprompt",
)

dart_test(
    name = "picoschema_test",
    main = "picoschema_test.dart",
    package_dir = "dart/dotprompt",
)

dart_test(
    name = "types_test",
    main = "types_test.dart",
    package_dir = "dart/dotprompt",
)

# Spec-based tests
# Note: deps are managed by the dart_spec_test macro
dart_spec_test(
    name = "SpecTest_metadata",
    spec_file = "//spec:metadata.yaml",
)

dart_spec_test(
    name = "SpecTest_partials",
    spec_file = "//spec:partials.yaml",
)

dart_spec_test(
    name = "SpecTest_picoschema",
    spec_file = "//spec:picoschema.yaml",
)

dart_spec_test(
    name = "SpecTest_variables",
    spec_file = "//spec:variables.yaml",
)

dart_spec_test(
    name = "SpecTest_helper_history",
    spec_file = "//spec:helpers/history.yaml",
)

dart_spec_test(
    name = "SpecTest_helper_ifEquals",
    spec_file = "//spec:helpers/ifEquals.yaml",
)

dart_spec_test(
    name = "SpecTest_helper_json",
    spec_file = "//spec:helpers/json.yaml",
)

dart_spec_test(
    name = "SpecTest_helper_media",
    spec_file = "//spec:helpers/media.yaml",
)

dart_spec_test(
    name = "SpecTest_helper_role",
    spec_file = "//spec:helpers/role.yaml",
)

dart_spec_test(
    name = "SpecTest_helper_section",
    spec_file = "//spec:helpers/section.yaml",
)

dart_spec_test(
    name = "SpecTest_helper_unlessEquals",
    spec_file = "//spec:helpers/unlessEquals.yaml",
)

dart_spec_test(
    name = "SpecTest_whitespace",
    spec_file = "//spec:whitespace.yaml",
)
